Register forms handler and check for id == 0 on incrementing id